--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
-.App {
-  text-align: center;
+form .form-body div .box {
+  background-color: rgb(206, 204, 204);
+  width: 100%;
+  padding: 8px;
+  outline: none;
+  border: 2px solid rgb(146, 145, 145);
+  border-radius: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form .form-body {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+form .form-body label {
+  display: block;
+  width: fit-content;
+  margin-bottom: 5px;
+  position: relative;
+  font-weight: 800;
+}
+
+form .form-body label::after {
+  content: '*';
+  position: absolute;
+  right: -8px;
+  top: 0;
+  color: red;
+}
+
+form .form-body .desc {
+  grid-column: 1/4;
+}
+
+form .form-body .desc textarea {
+  resize: none;
+  height: 120px;
+}
+
+.error {
+  color: red;
+  font-size: 9px;
+  display: none;
+}
+
+.load {
+  animation: loading 0.65s ease-in-out infinite;
+  display: none;
+}
+
+@keyframes loading {
+  from{
+      transform: rotate(0turn);
+  }
+  to{
+      transform: rotate(1turn);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+@media(max-width: 790px){
+  
+  form .form-body div {
+    grid-column: 1/4;
+  }
 }
 
-.App-link {
-  color: #61dafb;
+
+.select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  /* position: relative; */
 }
 
-@keyframes App-logo-spin {
+
+
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
